Anna last updates

--- a/football_refs.bib
+++ b/football_refs.bib
@@ -199,10 +199,10 @@ year = {2018}
 address = {Thousand Oaks},
 author = {Sabo, Don and Gray, Philip M. and Moore, Linda A.},
 booktitle = {Masculinities, Gender Relations, and Sport},
-editor = {{McKay, Jim; A. Messner, Michael; Sabo}, Don},
+editor = {{Jim McKay; Michael A. Messner; Don Sabo}},
 pages = {127--146},
 publisher = {SAGE Publications, Inc},
-title = {{Domestic Violence and Televised Athletic Events: “It's a Man Thing”}},
+title = {{Domestic Violence and Televised Athletic Events:'It's a Man Thing'}},
 year = {2000}
 }
 @article{Card2011,
