--- a/abstract.tex
+++ b/abstract.tex
@@ -55,17 +55,17 @@ Can sporting events act as triggers of domestic abuse? Previous research has sug
 
 In England, most studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting a record number of 44.5 million viewers\autocite{BBC}. One of the earliest examinations of the link between football and domestic abuse used daily data from 33 out of 39 police forces in England from the period of June-July in 2009 and 2010 (World Cup tournament year)\autocite{Brimicombe2012}. They tested whether the reported number of domestic abuse cases increased significantly on days when the England national football team won, lost, or drew, compared to the same days in 2009, and other, non-match days during the tournament in 2010. The study found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew. 
 
-A more comprehensive investigation, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-So Beautiful Game Campaign. While domestic abuse is predominantly understood as a pattern of ongoing behaviour, involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}, these studies, and other qualitative investigations\autocite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
+A more comprehensive investigation, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-So Beautiful Game Campaign. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}, these studies, and other qualitative investigations\autocite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
 
-Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references, and a ``us vs. them'' rhetoric to generate, and represent an English national identity\autocite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine, and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse, given susceptibility to such behaviours\autocite{Sabo,Swallow}. We speculate that this observation is especially pertinent in the context of England's participation in national football tournaments, owing to the popularity of the sport in the country, the associated media attention, and the resulting heightened sense of national consciousness.
+Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of ``Englishness'', fuelled by media narratives that often use war references, and a ``us vs. them'' rhetoric to generate and represent an English national identity\autocite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine, and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse\autocite{Sabo,Swallow}, given susceptibility to such behaviours. We speculate that this observation is especially pertinent in the context of England's participation in national football tournaments, owing to the popularity of the sport in the country, the associated media attention, and the resulting heightened sense of national consciousness.
 
 Qualitative investigations suggest that alcohol can be a significant factor in the link between football and domestic abuse. Alcohol has a strong association with domestic abuse, those with alcohol-problems are more likely to be perpetrators, and when alcohol is involved, there is evidence that the violence might result in more serious injuries \autocite{Peralta2010}. However, it is generally understood that the role of alcohol should be considered in the context of a range of social, biological and pyschological factors, and that alcohol is not the direct cause of domestic abuse \autocite{Javaid2015,Peralta2010}. One explanation for the co-occurrence of domestic abuse and alcohol is that, for some men, drinking and violence plays an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. It has also been suggested that some perpetrators use alcohol to deflect responsibility for their actions, using alcohol as a ``shield'' that protects them from being seen as a violent abuser\autocite{Javaid2015}.  
 
-In the US, the relationship between unexpected NFL losses and IPV did not depend on alcohol-involvement in the incident\autocite{Card2011}. The England-based quantitative studies did not look at the role of alcohol in particular. Given the strong association between drinking culture and football in England\autocite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry\autocite{Gornall2014}, we hypothesize that alcohol will play an important role in the relationship between national football tournaments and domestic abuse.
+In the US, the relationship between unexpected NFL losses and IPV did not depend on alcohol-involvement in the abuse case\autocite{Card2011}, while England-based quantitative studies did not look at the role of alcohol in particular. Given the strong association between drinking culture and football in England\autocite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry\autocite{Gornall2014}, we hypothesize that alcohol plays an important role in the relationship between national football tournaments and domestic abuse.
 
-To explore this hypothesis, we investigate whether the daily number of reported domestic abuse cases recorded by the West Midland Police in England between 2010 and 2018 increase on days when the England national team plays in the World Cup or the European Championship, and whether the effect, if any, depends on alcohol-involvement in the reported case. We also consider whether the result of the match alters the relationship, as previous research suggested that the effect is heightened when England loses\autocite{Kirby2014}. Our rich dataset further allows us to investigate various aspects of the link between football tournaments and domestic abuse, including how the relationship depends on the gender of the perpetrator and victim, whether similar patterns exist between other types of crimes and football, and how the strength of the effect depends on the exact timing of the match. We also examine whether similar links exist between rugby and domestic abuse, and if the abuse perpetrated on England match days is characteristically different from abuse occurring on non-match days.
+To explore this hypothesis, we test if the daily number of reported domestic abuse cases recorded by the West Midland Police in England between 2010 and 2018 increase on days when the England national team plays in the World Cup or the European Championship, and whether the effect, if any, depends on alcohol-involvement in the reported case or the result of the match. We find that alcohol-related domestic abuse significantly increases following an England victory. Our rich dataset further allows us to investigate various aspects of this win-effect, including the temporal pattern of the increase, and exploring if the link between football and domestic abuse depends on the gender of the perpetrator and victim. We conduct various robustness checks of the win-effect. We also examine if the increase extends to other types of criminal behaviours apart from domestic abuse, and whether similar links exist between rugby and domestic abuse. Finally, we test if the abuse perpetrated on England match days is characteristically different from abuse occurring on non-match days.
 
-In the UK, the term ``domestic abuse'' refers to a wide range of behaviours, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment either within a family or an intimate relationship\autocite{ONS}. Recent changes to the definition introduced the concept of coercive control, which recognises domestic abuse as a pattern of incidents, which can include any of the above behaviours. Previous research has mostly focused on IPV, the largest subcategory of domestic abuse. While IPV is more common than abuse perpetrated by family members\autocite{ONS}, our dataset does not contain information about the exact relationship between the victim and perpetrator, therefore we cannot separate the two types of abuse, and we will refer to them collectively as ``domestic abuse''.
+In the UK, the term ``domestic abuse'' refers to a wide range of behaviours, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment, either within a family or an intimate relationship\autocite{ONS}. Recent changes to the definition introduced the concept of coercive control, which recognises domestic abuse as a pattern of incidents, which can include any of the above behaviours. Previous research has mostly focused on IPV, the largest subcategory of domestic abuse. While IPV is more common than abuse perpetrated by family members\autocite{ONS}, our dataset does not contain information about the exact relationship between the victim and perpetrator, therefore we cannot separate the two types of abuse, and we will refer to them collectively as ``domestic abuse''.
 
 
 Our dataset contains all cases of domestic abuse that have been reported to the West Midlands Police between 2010 and 2018, but the vast majority of all domestic abuse incidents in fact never get reported (according to the Crime Survey of England and Wales, only 17\% of all domestic abuse victims reported the abuse to the police between April, 2017 and March, 2018\autocite{ONS}). This substantial reporting bias, and its potential correlation with other contextual factors warrants a careful interpretation of the estimates from any quantitative study investigating domestic abuse, and highlights the importance of utilising a mixed methods approach to explore the factors facilitating domestic abuse. 
@@ -132,14 +132,14 @@ AIC & 45,539.500 & 45,536.770 & 45,530.360 & 41,959.280 \\
 \end{threeparttable} }
 \end{table*}
 
-Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32\%--96\%]). The results also reveal a smaller, 9\%, 95\% CI [1\%-17\%] increase in non-alcohol related cases on days following an England match day, potentially the result of a temporal spillover effect from the previous match day. We also see an 8\%, 95\% CI [2\%-14\%] decrease in alcohol-related cases during tournament, but not England match days, perhaps stemming from heavy drinking being mostly concentrated around England match (and particularly England win) days, and relatively lower alcohol consumption on other days during the tournament. 
+Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32\%--96\%]). The results also reveal a smaller, 9\%, 95\% CI [1\%-17\%] increase in non-alcohol related cases on days following an England match day, potentially the result of a temporal spillover effect from the previous match day. We also see an 8\%, 95\% CI [2\%-14\%] decrease in alcohol-related cases during the tournament, but not on England match days, perhaps stemming from heavy drinking being mostly concentrated around England match (and particularly England win) days, and relatively lower alcohol consumption on other days during the tournament. 
 
 
 
-To explore the characteristics of this increase, we investigate whether the effect is sensitive to the gender of the perpetrator and the victim. Previous qualitative research has suggested that the link between football and domestic abuse is a result of violent expression of masculinity, where heavy drinking is also often present\autocite{Sabo}. If this was the case, we would expect football and alcohol to only affect reported numbers of male-perpetrated domestic abuse. 
+To explore the characteristics of this increase, we investigate whether the strength of the effect varies by offender-victim gender subgroup. Previous qualitative research has suggested that the link between football and domestic abuse is a result of violent expression of masculinity\autocite{Sabo}, where heavy drinking is also often present. If this was the case, we would expect football and alcohol to only affect reported numbers of male-perpetrated domestic abuse. 
 
 
-Table \ref{gender_regression} shows the results from four negative binomial regressions, one for each offender-victim gender groups. These reveal a pronounced increase in the subgroup of Male to Female abuse (which comprises about 80\% of all domestic abuse cases in our data), where the number of reported alcohol-related cases increase by 67\%, 95\% CI [35--107] on England win days. While we see similar tendencies in alcohol-related cases in other gender subgroups on England win days, these coefficients are about half the size of the male to female effect, and are not statistically different from zero. These results can be viewed in light of the observation that British football fandom is prevalently male-dominated \autocite{Parry2014}, and they lend support to the hypothesis that masculinity construction and alcohol may be key to the link between football and domestic abuse. However, it is unclear why victory-induced, alcohol-related masculinity construction would culminate in violence only against women. \NS{is there an inference from the null problem, as the m-to-m confidence interval is quite big? } \AT{I changed the wording, so I am not saying that it is exclusively male to female. Also included a sentence about similar patterns in other subgroups.}
+Table \ref{gender_regression} shows the results from four negative binomial regressions, one for each offender-victim gender groups. These reveal a pronounced increase in the subgroup of Male to Female abuse (which comprises about 80\% of all domestic abuse cases in our data), where the number of reported alcohol-related cases increase by 67\%, 95\% CI [35\%--107\%] on England win days. While we see similar tendencies for alcohol-related cases in other gender subgroups on England win days, these coefficients are about half the size of the male to female effect, and are not statistically different from zero. These results can be interpreted in light of the observation that British football fandom is prevalently male-dominated \autocite{Parry2014}, and they lend support to the hypothesis that masculinity construction and alcohol may be key to the link between football and domestic abuse. However, it is unclear why victory-induced, alcohol-related masculinity construction would culminate in violence only against women. \NS{is there an inference from the null problem, as the m-to-m confidence interval is quite big? } \AT{I changed the wording, so I am not saying that it is exclusively male to female. Also included a sentence about similar patterns in other subgroups.}
 
 
 \begin{table}
@@ -256,11 +256,11 @@ Number of days & 3,017 & 3,017 & 3,017 & 3,017 \\
 \end{table}
 
 
-Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while there is no evidence that England matches affect the number of reported property-related offences, we see an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after an England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, the effect of England matches on alcohol-related cases extends to other, non-domestic violent offences, resulting in a 55\%, 95\% [43\%--72\%] increase on days when England wins, and a smaller increase on days following an England match, the exact same pattern we have seen for domestic abuse. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from male to female cases (although male to male and female to male cases also contribute, see Table \ref{otherviolence_gender} in the Appendix). While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim refuses to admit any relationship to the offender), but even if this was the case, taken together, these findings only strengthen our conclusion that football and alcohol primarily make men more violent, and overwhelmingly towards women.
+Table \ref{othertype_regression} shows the results from a series of negative binomial regressions for different types of criminal behaviours. These reveal that while there is no evidence that England matches affect the number of reported property-related offences, we see an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after an England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, the effect of an England match on alcohol-related cases extends to other, non-domestic violent offences, resulting in a 55\%, 95\% [43\%--72\%] increase on days when England wins, and a smaller increase on days following an England match, the exact same pattern we have seen for domestic abuse. This result highlights that alcohol-related violent behaviour on England win days is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from male to female cases (although male to male and female to male cases also contribute, see Table \ref{otherviolence_gender} in the Appendix). While it is possible that a number of misclassified domestic abuse cases are reflected in this result (e.g, if the victim refuses to admit any relationship to the offender), but even if this was the case, taken together, these findings only strengthen our conclusion that football and alcohol primarily make men more violent, and overwhelmingly towards women.
 
 
 
-Next, we explore the temporal dynamics of the increase in alcohol-related domestic abuse on England match days in more detail. Based on our previous results which suggest important differences in the effect of football for alcohol and non-alcohol cases, we analyse the effect by the result of the match and alcohol-involvement in the case, by running two separate regressions for alcohol and non-alcohol related domestic abuse cases. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. These results strongly suggest that the emotional effect of a win drive the subsequent increase in alcohol-related domestic abuse, and highlight the possibility that the effect of England victories stem from prolonged post-match celebrations coupled with increased alcohol consumption.  Interestingly, we also see a slight increase in non-alcohol related incidents twelve hours after a loss or a victory, probably reflecting the small increase in non-alcohol related domestic abuse after an England match day seen in Table \ref{specifications}.
+Next, we explore the temporal dynamics of the increase in alcohol-related domestic abuse on England match days in more detail. Our previous results revealed important differences in the effect of football on alcohol and non-alcohol cases, therefore we run two separate regressions for alcohol and non-alcohol related domestic abuse cases to analyse the temporal pattern of the increase. Figure \ref{fig:threehours} shows a plot of the estimated percentage increase from these negative binomial regressions, revealing a stark increase in alcohol-related domestic abuse on days of an England victory, starting in the three hour period of the match, peaking in the three-hour period afterwards, and gradually declining to its original level in the twenty-four hours following the victory. These results strongly suggest that the emotional effect of a win drive the subsequent increase in alcohol-related domestic abuse, and highlight the possibility that the effect of England victories stem from prolonged post-match celebrations coupled with increased alcohol consumption.  Interestingly, we also see a slight increase in non-alcohol related incidents twelve hours after a loss or a victory, probably reflecting the small increase in non-alcohol related domestic abuse after an England match day seen in Table \ref{specifications}.
 
 
 \begin{figure}
@@ -275,7 +275,7 @@ Next, we explore the temporal dynamics of the increase in alcohol-related domest
 
 \section{Discussion}
 
-When the England football team wins in national football tournament, there is a 61\% increase in the reported number of alcohol-related domestic abuse. This is a large effect, translating into a 0.43 increase in the daily rate of alcohol-related cases per 100,000 individuals against a base rate 0.71 cases per 100,000. The effect is entirely limited to alcohol-related abuse, even though alcohol-related domestic abuse cases comprise only 23\% of all domestic abuse in our dataset. As such, we see this as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England. The effect is also exclusively limited to male-perpetrated domestic abuse, implicating masculinity and alcohol consumption as the pathway by which football increases abuse. The temporal pattern of the increase following an England victory is highly consistent with a causal explanation, further supported by the fact that the allocation of England win days can be considered random. \AT{Is this ok?}
+Our results have shown that an England victory in a national football tournament is followed by a 61\% increase in the reported number of alcohol-related domestic abuse. This is a large effect, translating into a 0.43 increase in the daily rate of alcohol-related cases per 100,000 individuals, against a base rate 0.71 cases per 100,000. The effect is entirely limited to alcohol-related abuse, even though alcohol-related domestic abuse cases comprise only 23\% of all domestic abuse in our dataset. As such, we see this as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and domestic abuse in England. The effect is also exclusively limited to male-perpetrated domestic abuse, implicating masculinity and alcohol consumption as the pathway by which football increases abuse. The temporal pattern of the increase following an England victory is highly consistent with a causal explanation, further supported by the fact that the allocation of England win days can be considered random. \AT{Is this ok?}
 
 
 Our findings show both similarities and differences with results from previous quantitative investigations. Replicating the results of a previous US study, we found that it is male to female abuse that is affected by a sporting event\autocite{Card2011}. In the same study, the effect of the match did not depend on alcohol-involvement in the abuse case, and the increase was driven by unexpected losses. In contrast, we find that in the context of England and football, it is a victory that results in the largest increase, and that alcohol involvement is critical. This discrepancy most likely stems from the contextual differences between the two studies (England, football, national tournaments vs. US, American football, NFL matches), highlighting that the effect of sports-induced emotional cues on domestic abuse is highly sensitive to the cultural context. 
